--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
 	},
 	"dependencies": {
 		"@astrojs/cloudflare": "^12.2.2",
-		"astro": "^5.3.1",
+		"add": "^2.0.6",
+		"astro": "^5.4.0",
+		"astro-robots-txt": "^1.0.0",
 		"lightningcss": "^1.29.1",
-		"open-props": "^1.7.13"
+		"open-props": "^1.7.13",
+		"sitemap": "^8.0.0"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250224.0",
