--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@astrojs/cloudflare": "^12.2.2",
+		"@astrojs/sitemap": "^3.2.1",
 		"add": "^2.0.6",
 		"astro": "^5.4.0",
 		"astro-robots-txt": "^1.0.0",
