--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"add": "^2.0.6",
 		"astro": "^5.4.0",
 		"astro-robots-txt": "^1.0.0",
+		"astro-seo": "^0.8.4",
 		"lightningcss": "^1.29.1",
 		"open-props": "^1.7.13",
 		"sitemap": "^8.0.0"
