--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,17 @@
 {
-  "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-"exclude": [
-    "dist"
-],
-"compilerOptions": {
+    "extends": "astro/tsconfigs/strict",
+    "include": [".astro/types.d.ts", "**/*"],
+    "exclude": [
+        "dist"
+    ],
+    "compilerOptions": {
     "types": [
         "@cloudflare/workers-types/2023-07-01"
-    ]
-}
+    ],
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./src/*"],
+			"@ui/*": ["./src/components/ui/*"]
+		}
+    }
 }
