--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@astrojs/sitemap": "^3.2.1",
 		"add": "^2.0.6",
 		"astro": "^5.4.0",
+		"astro-icon": "^1.1.5",
 		"astro-robots-txt": "^1.0.0",
 		"astro-seo": "^0.8.4",
 		"lightningcss": "^1.29.1",
