--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-	"name": "lonnies-mobile-mechanic",
-	"type": "module",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "astro dev",
-		"build": "astro build",
-		"preview": "astro build && wrangler pages dev",
-		"astro": "astro",
-		"deploy": "astro build && wrangler pages deploy",
-		"cf-typegen": "wrangler types"
-	},
-	"dependencies": {
-		"@astrojs/cloudflare": "^12.2.3",
-		"@astrojs/sitemap": "^3.2.1",
-		"add": "^2.0.6",
-		"astro": "^5.4.0",
-		"astro-icon": "^1.1.5",
-		"astro-robots-txt": "^1.0.0",
-		"astro-seo": "^0.8.4",
-		"lightningcss": "^1.29.1",
-		"open-props": "^1.7.13",
-		"sitemap": "^8.0.0"
-	},
-	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20250224.0",
-		"wrangler": "^3.111.0"
-	}
+  "name": "lonnies-mobile-mechanic",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro build && wrangler pages dev",
+    "astro": "astro",
+    "deploy": "astro build && wrangler pages deploy",
+    "cf-typegen": "wrangler types"
+  },
+  "dependencies": {
+    "@astrojs/cloudflare": "^12.2.3",
+    "@astrojs/sitemap": "^3.2.1",
+    "add": "^2.0.6",
+    "astro": "^5.4.0",
+    "astro-icon": "^1.1.5",
+    "astro-robots-txt": "^1.0.0",
+    "astro-seo": "^0.8.4",
+    "lightningcss": "^1.29.1",
+    "open-props": "^1.7.13",
+    "sitemap": "^8.0.0"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250224.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "wrangler": "^3.111.0"
+  }
 }
