--- a/src/content/features/speed.yaml
+++ b/src/content/features/speed.yaml
@@ -1,3 +1,3 @@
 title: Speed & Convenience
-description: I’ve given myself at least three rewards in the last five years.
-icon: "icon--award"
+description: Car trouble can happen anywhere, anytime. That’s why we bring fast, reliable mobile auto repair in Tampa straight to you—whether you're at home, work, or stuck on the road. No need for a tow, no waiting at a shop—we fix it where it sits so you can get back on the road faster.
+icon: "icon--speed"
