--- a/src/content/services/diagnostic.yaml
+++ b/src/content/services/diagnostic.yaml
@@ -1,4 +1,4 @@
 title: Auto Diagnostic Service
 description: Our experts can diagnose issues and get you back on the road swiftly.
 link: /services/diagnostic-service
-image: /images/diagnostic-service.jpg
+image: src/assets/images/HomeHero.png
