--- a/src/content/services/oilchange.yaml
+++ b/src/content/services/oilchange.yaml
@@ -1,4 +1,4 @@
 title: Oil Change
 description: Get your oil changed without leaving home or work.
 link: /services/oil-change
-image: /images/oil-change.jpg
+image: src/assets/images/HomeHero.png
