--- a/src/content/services/tirerepair.yaml
+++ b/src/content/services/tirerepair.yaml
@@ -1,4 +1,4 @@
 title: Tire Repair
 description: Flat tire? We’ve got you covered with quick tire replacements or repairs.
 link: /services/tire-repair
-image: /images/tire-repair.jpg
+image: src/assets/images/HomeHero.png
