--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "@cloudflare/workers-types": "^4.20250224.0",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "wrangler": "^3.111.0"
+    "wrangler": "4"
   }
 }
